--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "postinstall": "electron-builder install-app-deps",
     "build": "electron-builder",
     "build:mac": "electron-builder --mac",
-    "build:win": "electron-builder --win",
-    "build:linux": "electron-builder --linux",
-    "build:all": "electron-builder -mwl"
+    "build:win": "electron-builder --win --x64",
+    "build:linux": "electron-builder --linux --x64",
+    "build:all": "npm run build:win && npm run build:linux && npm run build:mac"
   },
   "build": {
     "appId": "com.sunshade.app",
@@ -37,6 +37,9 @@
       "category": "public.app-category.productivity",
       "icon": "src/icon.png"
     },
+    "dmg": {
+      "artifactName": "${productName}-${version}-mac-${arch}.${ext}"
+    },
     "win": {
       "target": [
         "nsis",
@@ -45,10 +48,10 @@
       "icon": "src/icon.png"
     },
     "nsis": {
-      "artifactName": "${productName}-Setup-${version}.${ext}"
+      "artifactName": "${productName}-${version}-windows-${arch}-setup.${ext}"
     },
     "portable": {
-      "artifactName": "${productName}-Portable-${version}.${ext}"
+      "artifactName": "${productName}-${version}-windows-${arch}-portable.${ext}"
     },
     "linux": {
       "target": [
@@ -57,6 +60,12 @@
       ],
       "icon": "src/icon.png",
       "category": "Office"
+    },
+    "deb": {
+      "artifactName": "${productName}-${version}-linux-${arch}.${ext}"
+    },
+    "appImage": {
+      "artifactName": "${productName}-${version}-linux-${arch}.${ext}"
     }
   },
   "devDependencies": {
